--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My page</title>
+  <title>Norang</title>
 </head>
 <body>
-  <p>Hello, World! this is cho's page</p>
+  <p>Hello, World!</p>
+  <t></t>
+  <p>this is cho's page</p>
+  <p>I'm norang</p>
+  <p>I'm coder</p>
+  <p>I'm singer song writer</p>
+  <p>I'm your father</p>
+  <p>I'm in island</p>
+  <p>I'm me</p>
+  
 </body>
 </html>
