--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
   <p>I'm your father</p>
   <p>I'm in island</p>
   <p>I'm me</p>
+
+  </t>
+  <p>1.bush craft</p>
+  <p>I will make box that is for foo</p>
+  <p>the box made by wood</p>
+
+  <p>2.home page</p>
+  <p>I already make my home page</p>
+  <p>And I continuously fill this page</p>
+  <p>it fill with my skill</p>
+  <p>it will be my portfoio</p>
+
+  <p>3.car</p>
+  <p> I will buy car</p>
   
 </body>
 </html>
