--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="gruhan's profile">
+  <meta property="og:description" content="Welcome">
+  <meta property="og:image" content="sample.png">
   <title>Norang</title>
 </head>
 <body>
